less/media.less
// main: ./main.less

@media screen and (max-width: 1500px) {
    
    .header {
        &__top {
            padding-left: 20px;
            padding-right: 20px;
        }
    }
    .nav__item {
        margin-left: 15px;
    }
    .features {
        &__content {
            margin-left: 50px;
        }
        &__title {
            &:after  {
                right: 50px;
            }
        }
        
    }
}
@media screen and (max-width: 1200px) {
    body,html {
        font-size: 9px;
    }
    .header {
        padding-bottom: 500px;
        &__logo {
            top:-40px;
        }
        &__top {
            padding: 0;
            
        }
        &__menu {
            padding-top: 70px;
            flex-direction: column;
            align-items: center;
        }
        &__nav {
            margin-bottom: 40px;
        }
        &__btn {
            width: 250px;
            height: 60px;
        }
    }
    
.story__content {
    padding-left: 30px;
}
.footer__payment {
    margin-left: 40px;
}
    
    
    
    
    
}
@media screen and (max-width: 1120px) {
    .about {
        &__item {
            flex-basis: 50%;
            &--border-bottom {
                border-bottom: 1px solid #f6edde;
            }
            &:nth-child(3) , &:nth-child(7) {
                border-left: 0;
            }
            &:nth-child(7) , &:last-child {
                border-bottom: 0;
            }
        }
        &__text {
            font-size: 2.4rem;
            padding-left: 20px;
            padding-right: 20px;
        }
    }
    
    .features {
        padding-bottom: 150px;
        padding-top: 50px;
        &__content  {
            display: flex;
            flex-direction: column;
            align-items: center;
            transform: translate(0,0)    ;
            -webkit-transform: translate(0,0)    ;
            -moz-transform: translate(0,0)    ;
            -ms-transform: translate(0,0)    ;
            -o-transform: translate(0,0)    ;
        }
        &__img {
            display: none;
        }
        &__title {
            margin-bottom: 100px;
            &__title:after  {
                right: 0;
            }
        }
        &__list {
            display: flex;
            flex-wrap: wrap;
            margin-bottom: 50px;
        }
        &__item {
        flex-grow: 1;
        flex-basis: 45%;
        }
    }
    
    .shop {
        overflow-x: scroll;
        &__item {
            flex-shrink: 0;
            flex-basis: 40%;
        }
    }
    
    .story__img-item {
        width: 90%;
        height: 90%;
    }
    .reviews:before {
        display: none;
    }
    .blog {
        padding-left: 30px;
        padding-right: 30px;
        &__img {
            width: 500px;
        }
        &__text {
            margin-left: 60px;
        }
    }
    
    .footer {
        &__logo {
            transform: translateX(-55px);
            -webkit-transform: translateX(-55px);
            -moz-transform: translateX(-55px);
            -ms-transform: translateX(-55px);
            -o-transform: translateX(-55px);
        }
        &__top {
            flex-direction: column;
            align-items: center;
        }
        &__information {
        max-width: 240px;
        margin-left: 0;
        }
        &__payment {
            margin-left: 90px;
        }
    }
    
    
}
@media screen and (max-width: 1024px) {
    .features {
        &__content {
            margin-left: 10px;
        }
        &__title {
            font-size: 4.5rem;
            text-align: center;
        }
    }
    .blog {
        flex-direction: column;
        align-items: center;
        text-align: center;
        padding-bottom: 120px;
        &__img {
            width: 100%;
        }
        &__right {
            display: flex;
            flex-direction: column;
            margin-top: 0;
            
            &::before {
                display: none;
            }
        }
        &__subtitle {
            margin-left: 0;
        }
        &__date {
            margin-left: 0;
        }
        &__text {
            margin-left: 0;
        }
    }
    .story {
        &__img {
            display: none;
        }
        &__title {
            margin-top: 40px;
        }
        &__text {
            margin-right: 0;
        }
    }
}
/* ... */

